Update Academic Projects

--- a/views/index.pug
+++ b/views/index.pug
@@ -275,6 +275,13 @@
               <p class="mb-0"><a href="https://www.github.com/Doliveraa/RedPony" target="_blank">Red Pony Github</a></p>
               <p class="mb-0"><a href="https://www.github.com/jaredraycoleman/astralframework" target="_blank">Astral Framework Github<a></p>
               <p class="mb-5"><a href="https://www.github.com/jaredraycoleman/phylo" target="_blank">Phylo Github</a></p>
+              <h4 class="text-secondary mb-3">Dotify P2P Application</h4>
+              <p class="mb-0"><strong>Tools</strong>:Node.js, Android, Google Compute Engine, Linux, TomP2P, Retrofit API, Github</p>
+              <p class="mb-0"><strong>Concepts</strong>: Peer-to-Peer, TCP/IP, Backend Development, Security, Promises, Frontend Development, Version Control, REST, Application Development, Multithreading, Multiprocessing</p>
+              <p class="mb-0"><strong>Languages</strong>: Javascript, Java, XML, Bash</p>
+              <p class="mb-0"><strong>Goal</strong>:Develop a Dynamic Peer-to-Peer system for music streaming.</p>
+              <p class="mb-0"><a href="https://www.github.com/PenguinDan/Dotify_Server" target="_blank">Dotify Node.js Server</a></p>
+              <p class="mb-5"><a href="https://www.github.com/HappyLyfe123/Dotify_Project_Frontend target="_blank">Dotify Android Application</a></p>
               <h4 class="text-secondary mb-3">Security: Ransomware</h4>
               <p class="mb-0"><strong>Tools</strong>: Python Cryptography Hazmat API, Node.js, Mongo, Linux, Github, Google Cloud</p>
               <p class="mb-0"><strong>Concepts</strong>: RSA, AES-CBC, SSL, HMAC, Security, Backend Development, Database Management, Authentication, NoSQL, Google Cloud Environment, Version Control</p>
